# profile

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  mypy.ini  postgresql.conf  prestart.sh  pyproject.toml
.github/workflows/: pre-commit.yml
app/: backend_pre_start.py  initial_data.py  main.py
app/api/api_v1/: __init__.py
app/api/api_v1/status/: route.py
app/api/api_v1/todo/: controller.py  route.py
app/api/api_v1/users/: controller.py  route.py
app/config/: config.py
app/crud/: base.py  todo.py  users.py
app/db/: base.py  base_class.py  init_db.py  session.py
app/models/: todo.py  users.py
app/schemas/: status.py  todo.py  users.py
migration/: env.py
migration/versions/: 2a3fc7869a99_create_users_table.py  5a5e4b6f3adc_create_todo_table.py
scripts/: format.sh  lint.sh
